# Aether

./: .gitignore  README.md  aether-keyword-discovery-9cdfa2.md  index.html  metadata.json  package-lock.json  package.json  server.ts  tauri-package.md  vite.config.ts
.github/workflows/: release.yml
docs/: global-design.md  global-ipml.md  ui-plan.md
docs/package-update.md/: ci-cd-operations.md  tauri-package-update-system.md
scripts/: build-release.ps1  migrate-signing.ps1  prepare-updater-config.mjs  test-updater-check.mjs
signing/: README.md
src/: App.tsx  index.css  main.tsx  mockData.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: report-template.html
src-tauri/src/: error.rs  lib.rs  main.rs  worker.rs
src-tauri/src/adapters/: alternativeto.rs  app_store.rs  bing.rs  chrome_web_store.rs  douban.rs  ecommerce.rs  g2.rs  google.rs  google_play.rs  google_trends.rs  linkedin.rs  mod.rs  product_hunt.rs  quora.rs  reddit.rs  search_provider.rs  tieba.rs  tiktok.rs  traits.rs  trustpilot.rs  types.rs  x_twitter.rs  youtube.rs  zhihu.rs
src-tauri/src/analysis/: mod.rs
src-tauri/src/commands/: analysis.rs  config.rs  device.rs  export.rs  mod.rs  modeling.rs  project.rs  snapshot.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/llm/: deepseek.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/normalization/: mod.rs
src-tauri/src/query_planner/: mod.rs
src-tauri/src/scheduler/: mod.rs
(+30 files in other folders)
